--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,3 @@
 {
-	"solidity.compileUsingRemoteVersion": "v0.8.22+commit.4fc1097e",
-	"solidity.packageDefaultDependenciesContractsDirectory": "",
-	"solidity.packageDefaultDependenciesDirectory": "hardhat/node_modules"
+	"solidity.compileUsingRemoteVersion": "v0.8.22+commit.4fc1097e"
 }
