--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -1,23 +1,24 @@
 {
-	"name": "contracts",
+	"name": "hardhat-contracts",
 	"version": "1.0.0",
 	"description": "",
+	"private": true,
 	"scripts": {
 		"compile": "npx hh compile",
 		"test": "npx hh test",
-		"test-gas": "REPORT_GAS=true npx hh test",
+		"test:gas": "REPORT_GAS=true npx hh test",
 		"node": "npx hh node",
 		"deploy": "npx hh run scripts/HelloWorld.deploy.ts",
-		"deploy-zkEVM": "npx hh run scripts/HelloWorld.deploy.ts --network zkEVM"
+		"deploy:zkEVM": "npx hh run scripts/HelloWorld.deploy.ts --network zkEVM"
 	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
 	"devDependencies": {
 		"@nomicfoundation/hardhat-toolbox": "^3.0.0",
 		"dotenv": "^16.3.1",
 		"find-config": "^1.0.0",
 		"hardhat": "^2.19.0",
 		"hardhat-shorthand": "^1.0.0"
-	}
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC"
 }
