--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -9,10 +9,12 @@
 		"test:gas": "REPORT_GAS=true npx hh test",
 		"node": "npx hh node",
 		"deploy": "npx hh run scripts/HelloWorld.deploy.ts",
-		"deploy:zkEVM": "npx hh run scripts/HelloWorld.deploy.ts --network zkEVM"
+		"deploy:zkEVM": "npx hh run scripts/HelloWorld.deploy.ts --network zkEVM",
+		"verify:zkEVM": "npx hardhat verify --network zkEVM"
 	},
 	"devDependencies": {
 		"@nomicfoundation/hardhat-toolbox": "^3.0.0",
+		"@nomicfoundation/hardhat-verify": "^2.0.0",
 		"dotenv": "^16.3.1",
 		"find-config": "^1.0.0",
 		"hardhat": "^2.19.0",
